# cpp_covid19_simulator

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  location.cpp  location.hpp  main.cpp  mobility_model.cpp  mobility_model.hpp  person.cpp  person.hpp  ppmodel.cpp  ppmodel.hpp  random_generator.hpp  report_status.hpp  simulator.cpp  simulator.hpp  ui.cpp  ui.hpp
cmake/: AddGitSubmodule.cmake
simulation/: CMakeLists.txt
simulation/include/: mobility_model.hpp  random_generator.hpp
simulation/src/: location.cpp
